# teleport

./: .env.example  .gitignore  Cargo.toml  Config.toml  LICENSE  Makefile  README.md  build.rs  expanded.rs
.github/workflows/: ci.yml
.sqlx/: query-08364ef2659aff5ef337da7ea574ff0ddd2f713d7c5d4131932b357cc14b078b.json  query-25ab59595acb0863eabb99cb2043204d497869fe55b83402b10c0710270c6f93.json  query-5aa05c7d36be3c45f8e9c7630b4d5839789951dc5c3d86e2f3defd9a0e7a03aa.json  query-6553a8bc645fff15cdbc57aae2de151b9a09b6b14ed10d30e9660f55d48be619.json  query-712408ec60b640e910cde3fa35d145b4df80f5af1a262b2a68b6f9dc24858574.json  query-846ee38a52ecdaa0f20ccf0518979f1174279c4cd2634e2bb142b3e53c371905.json  query-a35a2cd0ac05b787cba63c0663c3d7bfcae0760ea9d4dd383917045327a20d39.json  query-a97217a47e60ef00e1f16cfef7ae6a769f03ab903b90d57d16bc9f00b46886f9.json  query-efd903ad0bd7871fc42ad9fe7bfc3eb15061f8b8ff74e9641545d8445562b2bd.json  query-f2243f2ea9882ce5a5efee4a64c682af506a26e68278e6724313c90e71a7f867.json
crates/cli/: Cargo.toml  README.md
crates/cli/src/: lib.rs  start.rs
crates/cli/src/identity/: create.rs
crates/cli/src/profile/: storage.rs
crates/cli/src/reset/: full.rs
crates/common/: Cargo.toml  README.md  build.rs
crates/common/src/: config.rs  lib.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/crypto/: Cargo.toml  README.md
crates/crypto/src/: blake3.rs  config.rs  eip712.rs  lib.rs
crates/crypto/src/signers/: ed25519_signer.rs  signer.rs
crates/eth/: Cargo.toml  README.md
crates/eth/abis/: IdRegistry.json  KeyRegistry.json  StorageRegistry.json
crates/eth/src/: id_registry.rs  indexer.rs  key_registry.rs  lib.rs  storage_registry.rs  utils.rs
crates/hub/: Cargo.toml  README.md
crates/hub/src/: config.rs  errors.rs  hub.rs  key.rs  lib.rs  validation.rs
crates/hub/src/p2p/: event_loop.rs  gossip_node.rs  mod.rs
crates/hub/src/sync/: trienode.rs
crates/p2p/: Cargo.toml
crates/p2p/src/: errors.rs  event_loop.rs  gossip_node.rs  lib.rs  time.rs  validation.rs
crates/protobuf/: Cargo.toml  build.rs
crates/protobuf/src/: lib.rs
crates/rpc/: Cargo.toml  README.md
crates/rpc/src/: admin_server.rs  server.rs
crates/storage/: Cargo.toml  README.md
crates/storage/src/: db.rs  lib.rs
crates/storage/src/queries/: insert_chain_event.sql  insert_fid.sql  insert_signer.sql  insert_storage_allocation.sql  signer_metadata_by_key.sql  update_custody_address.sql  update_recovery_address.sql  update_remove_chain_event.sql
lib/cli/: Cargo.toml
lib/cli/src/: console.rs  lib.rs  start.rs
lib/cli/src/identity/: mod.rs
lib/cli/src/profile/: mod.rs  rpc.rs
lib/cli/src/reset/: events.rs  mod.rs
lib/common/: Cargo.toml  build.rs
lib/common/src/: ed25519.rs  eip712.rs  lib.rs  peer_id.rs  state.rs  time.rs  username_proof.rs
lib/common/src/crypto/: blake3.rs
lib/common/src/signers/: ed25519_signer.rs
lib/eth/: Cargo.toml
lib/eth/abis/: KeyRegistry.json
lib/eth/src/: id_registry.rs  id_registry_listener.rs  indexer.rs  key_registry.rs  key_registry_listener.rs  lib.rs  storage_registry.rs  sync.rs  utils.rs
lib/hub/: Cargo.toml
lib/hub/migrations/: 20231118180138_farcaster.sql
lib/hub/src/: hub.rs  main.rs  storage.rs  validation.rs
lib/hub/src/p2p/: event_loop.rs  gossip_behaviour.rs  gossip_node.rs
lib/hub/src/sync/: trienode.rs
lib/rpc/: Cargo.toml
lib/rpc/src/: admin_server.rs  server.rs
lib/storage/: Cargo.toml
lib/storage/migrations/: 20231118180138_farcaster.sql
lib/storage/src/: db.rs  lib.rs
lib/storage/src/queries/: insert_fid.sql  max_block_number.sql
protobufs/: gossip.proto  hub_event.proto  hub_state.proto  id_registry_event.proto  job.proto  message.proto  name_registry_event.proto  peer_id.proto  request_response.proto  rpc.proto  sync_trie.proto  username_proof.proto
src/: cli.rs  hub.rs  main.rs  teleport.rs  time.rs
src/cli/: mod.rs  start.rs  status.rs
src/cli/identity/: create.rs  verify.rs
src/cli/profile/: gossip.rs
src/common/: errors.rs
src/common/crypto/: ed25519.rs
src/core/: errors.rs  mod.rs  time.rs
src/core/crypto/: ed25519.rs  eip712.rs  mod.rs
src/core/protobufs/: mod.rs
src/core/signers/: ed25519_signer.rs  mod.rs  signer.rs
src/crypto/: blake3.rs  eip712.rs
src/network/: mod.rs
src/network/p2p/: event_loop.rs  gossip_behaviour.rs  gossip_node.rs  handle_swarm_event.rs  mod.rs  pubsub_peer_discovery.rs  utils.rs
src/network/sync/: mod.rs  trienode.rs
src/rpc/: admin_server.rs  mod.rs  server.rs
src/storage/db/: rocksdb.rs
