[package]
name = "teleport"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = { version = "1.4.1", features = ["digest", "traits-preview"] }
libp2p = { version = "0.52.0", features = [
    "gossipsub",
    "macros",
    "tcp",
    "tokio",
    "noise",
    "ed25519",
    "identify",
    "ping",
] }
prost = "0.11.9"
serde = { version = "1.0.183", features = ["derive"] }
sled = "0.34.7"
thiserror = "1.0.44"
tonic = "0.9.2"
libp2p-mplex = "0.40.0"
env_logger = "0.10.0"
tokio = { version = "1.32.0", features = ["full"] }
void = "1.0.2"
rocksdb = "0.21.0"
clap = { version = "4.3.23", features = ["derive"] }
hex = "0.4.3"
serde_json = "1.0.105"
cron = "0.12.0"
chrono = "0.4.26"
tokio-stream = "0.1.14"

[build-dependencies]
prost-build = "0.11.9"
tonic-build = "0.9.2"

[patch.crates-io]
prost = { git = 'https://github.com/OpenFarcaster/prost.git' }
