[workspace]
members = [
    "lib/cli",
    "lib/common",
    "lib/rpc",
    "lib/hub",
    "lib/eth",
    "lib/storage",
]
resolver = "2"

[workspace.package]
authors = ["openfarcaster"]
name = "teleport"
license = "MIT"
version = "0.1.0"
edition = "2021"
readme = "./README.md"
homepage = "https://github.com/OpenFarcaster/teleport"
repository = "https://github.com/OpenFarcaster/teleport"

[workspace.dependencies]
blake3 = { version = "1.4.1", features = ["digest", "traits-preview"] }
libp2p = { version = "0.52.0", features = [
    "gossipsub",
    "macros",
    "tcp",
    "tokio",
    "noise",
    "ed25519",
    "identify",
    "ping",
    "tls",
] }
prost = "0.11.9"
serde = { version = "1.0.183", features = ["derive"] }
sled = "0.34.7"
thiserror = "1.0.44"
tonic = "0.9.2"
libp2p-mplex = "0.40.0"
env_logger = "0.10.0"
tokio = { version = "1.32.0", features = ["full"] }
void = "1.0.2"
sqlx = { version = "0.7.2", features = ["sqlite", "runtime-tokio"] }
hex = "0.4.3"
serde_json = "1.0.105"
cron = "0.12.0"
chrono = "0.4.26"
clap = { version = "4.4.4", features = ["derive", "env"] }
tokio-stream = "0.1.14"
log = "0.4.20"
secp256k1 = { version = "0.28.0", features = ["recovery"] }
ethers = { version = "2.0.11", features = ["ws"] }
once_cell = "1.18.0"
ed25519-dalek = "2.1.0"
rand = "0.8.4"
uuid = { version = "1.0", features = ["v4"] }
futures-util = { version = "0.3.17" }
alloy-dyn-abi = { version = "0.5.3", features = ["eip712"] }
alloy-primitives = { version = "0.5.3" }
futures = { version = "0.3.17" }
figment = { version = "0.10.12", features = ["toml", "env"] }
dotenv = { version = "0.15.0" }
indicatif = { version = "0.17.8" }

[profile.release]
codegen-units = 1
lto = true
strip = true
