[package]
authors = { workspace = true }
description = "Common lib for Teleport"
edition = { workspace = true }
name = "teleport_common"
homepage = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[dependencies]
blake3 = { workspace = true }
thiserror = { workspace = true }
libp2p = { workspace = true }
prost = { workspace = true }
tonic = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dotenv = { workspace = true }
figment = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }

[build-dependencies]
prost-build = "0.11.9"
tonic-build = "0.9.2"


[patch.crates-io]
prost = { git = 'https://github.com/OpenFarcaster/prost.git' }
