[package]
authors.workspace = true
name = "teleport_config"
description = "Config build for teleport"
license.workspace = true
version.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
dotenv = {workspace = true}
figment = {workspace = true}
serde = {workspace = true}
serde_json = { workspace = true }
