[package]
authors = { workspace = true }
description = "RPC for Teleport"
edition = { workspace = true }
name = "teleport_rpc"
homepage = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[dependencies]
tonic = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
teleport_protobuf = { path = "../protobuf" }
