[package]
authors = { workspace = true }
description = "teleport Storage"
edition = { workspace = true }
name = "teleport_storage"
homepage = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[dependencies]
teleport_protobuf = { path = "../protobuf" }
prost = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
hex = { workspace = true }
sqlx = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
ethers = { workspace = true }

[dev-dependencies]
tempfile = "3.2.0"
