[package]
authors = { workspace = true }
description = "teleport hub"
edition = { workspace = true }
name = "teleport_hub"
homepage = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[dependencies]
teleport_common = { path = "../common" }
teleport_rpc = { path = "../rpc" }
teleport_cli = { path = "../cli" }
libp2p = { workspace = true }
clap = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
void = { workspace = true }
libp2p-mplex = { workspace = true }
tonic = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }

[dev-dependencies]
tempfile = "3.2.0"